MultipartSize Validator Renamed posterPath -> avatarUri (Person field)